--- a/app/src/main/res/layout/activity_drawer_menu.xml
+++ b/app/src/main/res/layout/activity_drawer_menu.xml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawers_menu"
+<LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
         <ImageView
             android:id="@+id/imageview1"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="150dp"
+            android:background="@drawable/picture1"
             android:gravity="center"/>
         <LinearLayout
             android:layout_width="match_parent"
@@ -157,6 +151,4 @@
                 android:gravity="center_vertical"
                 android:text="About"/>
         </LinearLayout>
-
     </LinearLayout>
-</androidx.drawerlayout.widget.DrawerLayout>
