--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_width="match_parent">
@@ -20,7 +19,7 @@
             android:layout_width="0dp"
             android:layout_weight="0.065"
             android:layout_height="match_parent"
-            android:layout_marginRight="250dp"
+            android:layout_marginEnd="250dp"
             android:background="@drawable/icon" />
         <Button
             android:id="@+id/search"
@@ -28,29 +27,39 @@
             android:layout_height="match_parent"
             android:layout_weight="0.05"
             android:background="@drawable/search"
-            android:foreground="@drawable/search"
-           />
+            tools:ignore="ButtonStyle" />
+
     </LinearLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycleview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="390dp"/>
-    <Button
-        android:id="@+id/add"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/add"
-        android:layout_gravity="right"
-        />
-        </LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            //android:layout_marginBottom="390dp" />
+
+            <Button
+                android:id="@+id/add"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="end"
+                android:background="@drawable/add"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"/>
+
+
+        </RelativeLayout>
+
+    </LinearLayout>
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_view"
         android:layout_width="260dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:headerLayout="@layout/activity_drawer_menu"
         >
+        <include layout="@layout/activity_drawer_menu"/>
     </com.google.android.material.navigation.NavigationView>
 </androidx.drawerlayout.widget.DrawerLayout>
 
